@@ -1,2 +1,3 @@
 .idea
 vendor/
+coverage/
