@@ -254,4 +254,24 @@ class CalculationsTest extends TestCase {
             ->withPrecision(CsvFormat::PRECISION_2);
         $this->api->system('ABCDE')->calculations()->bulk()->measurements()->get($criteria);
     }
+
+    public function testGetCalculationsSimulation() {
+        $json = file_get_contents(__DIR__ . '/responses/getCalculationsSimulation.json');
+        $this->api->expects($this->once())
+            ->method('run')
+            ->with($this->identicalTo('systems/ABCDE/calculations/simulation'))
+            ->willReturn($json);
+
+        $criteria = new MeasurementsCriteria();
+        $criteria->withDateFrom(DateTime::createFromFormat(DateTime::RFC3339, '2016-11-01T00:00:00+01:00'))
+            ->withDateTo(DateTime::createFromFormat(DateTime::RFC3339, '2016-11-02T23:59:59+01:00'));
+
+        $simulationValues = $this->api->system('ABCDE')->calculations()->simulation()->get($criteria);
+
+        $this->assertCount(2, $simulationValues);
+        $this->assertEquals('2016-11-01T00:00:00+01:00', $simulationValues[0]->timestamp->format(DateTime::RFC3339));
+        $this->assertEquals(2.79430153178, $simulationValues[0]->max);
+        $this->assertEquals(2.2862467078199997, $simulationValues[0]->min);
+        $this->assertEquals(2.5402741198, $simulationValues[0]->expected);
+    }
 }
