@@ -1,0 +1,16 @@
+{
+  "data": [
+    {
+      "timestamp": "2016-11-01T00:00:00+01:00",
+      "max": 2.79430153178,
+      "min": 2.2862467078199997,
+      "expected": 2.5402741198
+    },
+    {
+      "timestamp": "2016-11-01T00:05:00+01:00",
+      "max": 2.3015888865200007,
+      "min": 1.8831181798800003,
+      "expected": 2.0923535332000003
+    }
+  ]
+}
